@@ -3,31 +3,19 @@ package com.whale.web.design.colorspalette.service;
 import com.whale.web.exceptions.domain.WhaleRunTimeException;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
-
 import javax.imageio.ImageIO;
 import java.awt.*;
 import java.awt.image.BufferedImage;
 import java.io.IOException;
-<<<<<<< HEAD
 import java.util.HashMap;
-=======
 import java.util.*;
->>>>>>> eecfbb41c00a9f942f1480b26fe210a8d2609a4f
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CreateColorsPaletteService {
 
-<<<<<<< HEAD
-    public List<Color> createColorPalette(MultipartFile multipartFile){
-
-        int numColors = 6; // Number of predominant colors to be extracted
-        int maxColorDistance = 70; // Maximum allowed distance between colors
-=======
     private static final int NUM_COLORS = 6; // Number of predominant colors to be extracted
     private static final int MAX_COLOR_DISTANCE = 70; // Maximum allowed distance between colors
->>>>>>> eecfbb41c00a9f942f1480b26fe210a8d2609a4f
 
     public List<Color> createColorPalette(MultipartFile multipartFile) {
         try {
@@ -64,13 +52,9 @@ public class CreateColorsPaletteService {
                     .sorted(Map.Entry.<Integer, Integer>comparingByValue().reversed())
                     .limit(NUM_COLORS)
                     .map(entry -> new Color(entry.getKey(), true))
-                    .collect(Collectors.toList());
+                    .toList();
 
-<<<<<<< HEAD
         } catch (WhaleRunTimeException | IOException e) {
-=======
-        } catch (IOException e) {
->>>>>>> eecfbb41c00a9f942f1480b26fe210a8d2609a4f
             throw new WhaleRunTimeException(e.getMessage());
         }
     }
